# openfeature-python-gcp-init

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/openfeature_python_gcp_init/: openfeature_setup.py
tests/: test_openfeature_setup.py
