[project]
name = "openfeature-python-gcp-init"
version = "0.1.0"
description = "A Python package to initialise and configure the OpenFeature client with the LaunchDarkly provider on Google Cloud Platform."
authors = [
    {name = "Tristan Kenney",email = "tristan.kenney@zitcha.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0)",
    "pydantic-settings (>=2.8.1,<3.0)",
    "launchdarkly-openfeature-server (>=0.3.0,<0.4.0)",
    "openfeature-sdk (>=0.8.1,<0.9.0)"
]
keywords = ["feature-flags", "openfeature", "launchdarkly"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openfeature-python-gcp-init"
version = "0.1.0"
description = "A Python package to initialise and configure the OpenFeature client with the LaunchDarkly provider on Google Cloud Platform."
authors = ["Tristan Kenney <tristan.kenney@zitcha.com>"]
readme = "README.md"
packages = [
  { include = "openfeature_python_gcp_init", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.7"
pydantic-settings = "^2.8.1"
launchdarkly-openfeature-server = "^0.3.0"
openfeature-sdk = "^0.8.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
isort = "^6.0.0"
mypy = "^1.16.1"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pytest-env = "^1.1.5"
pre-commit = "^4.2.0"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
show_error_codes = true
strict = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_return_any = false

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 120

[tool.pytest.ini_options]
filterwarnings = [
  'ignore:.*Python 3\.\\d.*:DeprecationWarning',
  'ignore:Converting.*float64.*:DeprecationWarning',
  'ignore:.*deprecated alias for the builtin.*:DeprecationWarning',
  'ignore:.*int_from_bytes is deprecated.*',
  'ignore:.*feature_perturbation.*',
  'ignore:numpy\.ufunc size changed.*',
]
pythonpath = ["src"]
testpaths = ["tests"]
